feat: update navbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,15 @@ a{
     text-decoration: none;
 }
 
+.light{
+    --bg:#0f172a;
+    --text-color: #ddd;
+    --softBg: #1f273a;
+    --softTextColor: #a6a6a6;
+}
+
+
+
 .container{
     min-height: 100vh;
     background-color: var(--bg);
