--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -15,9 +15,50 @@
 .logo{
     flex:1;
     text-align: center;
+    font-size:36 px;
+    font-weight: bold;
 }
 .links {
     display: flex;
+    align-items: center;
     gap: 20px;
     flex:1;
+    font-size: 20px;
+}
+
+@media screen and (max-width: 1280px) {
+    .logo {
+        font-size: 32px;
+    }
+    .links {
+        font-size: 20px;
+        gap:15px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .social {
+        display: none;
+    }
+    .logo {
+        text-align: left;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .logo {
+        font-size: 24px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+
+    .link {
+        display: none;
+    }
+
+    .links {
+        justify-content: flex-end;
+    }
 }
