--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -1,3 +1,14 @@
-.container{
-    
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  width: 100px;
+  border: none;
+  border-radius: 10%;
+  padding: 16px;
+  background-color: crimson;
+  color: white;
+  cursor: pointer;
 }
