--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   gap: 50px;
 }
+
 .imageContainer {
   flex: 1;
   height: 350px;
@@ -39,5 +40,11 @@
 .link {
   border-bottom: 1px solid crimson;
   width: max-content;
-  padding: 2px;
+  padding: 2px 0px;
+}
+
+@media screen and (max-width: 1280px) {
+  .imageContainer {
+    display: none;
+  }
 }
