--- a/src/app/[slug]/singlePage.module.css
+++ b/src/app/[slug]/singlePage.module.css
@@ -60,3 +60,30 @@
     padding-right: 50px;
     font-size: 20px;
 }
+
+@media screen and (max-width: 1536px) {
+    .title {
+        font-size: 54px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .title {
+        font-size: 48px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+
+    .imageContainer {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .title {
+        font-size: 36px;
+    }
+
+
+}
