--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,10 @@ a{
     }   
 }
 
+.ql-container {
+    font-size: 28px !important;
+}
+
+.quill > .ql-container >.ql-editor.ql-blank::before{
+    color: #b3b3b1;
+}
